gl31-master/src/test/deca/syntax/invalid/complet/bad_return2.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 11: Erreur, ';' manquant
//
// Historique:
//    cree le 18/01/2021
class Test{
    int methodeTest(int param){
        return param
    }
}
